chore: fix overflow

--- a/src/styles/Emozioni.module.css
+++ b/src/styles/Emozioni.module.css
@@ -9,9 +9,8 @@
 }
 
 .section {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  overflow: hidden;
 }
 
 .emotionPrevious, .emotionNext {
@@ -56,7 +55,7 @@
 }
 
 .section h1 {
-  margin-top: 10%;
+  margin-top: 9%;
   margin-left: 8%;
   font-size: 42px;
   font-family: 'KG Happy';
@@ -74,14 +73,13 @@
 
 .content {
   margin-left: 8%;
-  font-size: 16px;
-  margin-left: 8%;
+  font-size: 14px;
   display: flex;
   flex-direction: column;
   gap: 1em;
 }
 
-@media screen and (width < 1024px) {
+@media screen and (width < 1400px) {
   .imgContainer {
     width: 50%;
     height: 50%;
