--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -1,5 +1,5 @@
 .navbar {
-  margin: 4% 8%;
+  margin: 3% 8%;
   padding: 0.4em 0.8em;
   position: fixed;
   width: 84%;
