--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,6 +26,7 @@ html {
 html, body {
   width: 100vw;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 a {
